--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
        <input type='text' id='texto-tarefa'>
        <button id = 'criar-tarefa'>Adicionar</button>
        <section>
+          <div class="list-tasks">
            <ol id='lista-tarefas'></ol>
+          </div>
        </section>
     </main>
   <script src="script.js"></script>
